@@ -1,3 +1,4 @@
-mglib == 1.3.5
-boto3
-celery
+mglib == 1.3.8
+boto3 == 1.18.36
+botocore == 1.21.36
+celery == 5.0.5
